syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.commonproto.payment";
option java_outer_classname = "PaymentProto";

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string orderId = 1;
  double amount = 2;
  string currency = 3;
}

message PaymentResponse {
  bool success = 1;
  string transactionId = 2;
  string message = 3;
}
